--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-audioviz = { path = "../audioviz" }
+# audioviz = { path = "../audioviz" }
+audioviz = "0.3.0"
 cpal = "0.13.4"
 gag = "1.0.0"
 clap = "2.33.3"
+serde = { version = "1.0.130", features = ["derive"]}
+serde_json = "1.0.68"
 
 # termion backend
 termion = "1.5.6"
