--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ clap = "2.33.3"
 serde = { version = "1.0.130", features = ["derive"]}
 serde_json = "1.0.68"
 
+# for interpolation in color gradients
+splines = "4.0.3"
+
 # termion backend
 termion = "1.5.6"
 
