--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,12 +17,17 @@ serde_json = "1.0.68"
 # for interpolation in color gradients
 splines = "4.0.3"
 
-# termion backend
-termion = "1.5.6"
-
-# wgpu backend
+# universal wgpu backend
 winit = "0.25"
 wgpu = "0.10.0"
 bytemuck = { version = "1.4", features = [ "derive" ] }
 pollster = "0.2"
 winit_input_helper = "0.10.0"
+
+# termion backend for unix targets
+[target.'cfg(target_family = "unix")'.dependencies]
+termion = "1.5.6"
+
+# crossterm backend for windows targets
+[target.'cfg(target_family = "windows")'.dependencies]
+crossterm = "0.22.1"
