--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+# for debug white noise
+rand = "0.8.4"
+
 audioviz = { path = "../audioviz" }
 # audioviz = "0.3.0"
 cpal = "0.13.4"
