--- a/default_config.json
+++ b/default_config.json
@@ -9,34 +9,34 @@
       "resolution": null,
       "volume": 1.0,
       "volume_normalisation": {
-        "Linear": 0.65
+        "Linear": 0.6
       },
       "frequency_distribution": [
         [
-          250,
-          6.0
+          150,
+          6.5
         ],
         [
           1000,
-          6.0
+          5.0
         ],
         [
           2500,
           1.0
         ]
       ],
-      "interpolation": "Step"
+      "interpolation": "Linear"
     },
     "fft_resolution": 4096,
     "refresh_rate": 60,
-    "gravity": 2.5
+    "gravity": 1.75
   },
   "fps": 60,
   "color": {
     "Rgb": [255, 0, 0]
   },
   "width": 1,
-  "spacing": 0,
+  "spacing": 1,
   "mirror": true,
   "wgpu": {
     "transparent": false,
