--- a/default_config.json
+++ b/default_config.json
@@ -3,28 +3,26 @@
     "processor": {
       "sample_rate": 44100,
       "frequency_bounds": [
-        45,
+        35,
         20000
       ],
       "resolution": null,
-      "volume": 0.5,
-      "volume_normalisation": {
-        "Linear": 0.65
-      },
+      "volume": 4.0,
+      "volume_normalisation": "Mixture",
       "position_normalisation": "Harmonic",
       "manual_position_distribution": null,
       "interpolation": "Step"
     },
     "fft_resolution": 4096,
     "refresh_rate": 120,
-    "gravity": 0.5
+    "gravity": 35.0
   },
   "fps": 60,
   "color": {
     "Gradient": [
         [
-          0,
           255,
+          0,
           255
         ],
         [
