--- a/default_config.json
+++ b/default_config.json
@@ -3,34 +3,39 @@
     "processor": {
       "sample_rate": 44100,
       "frequency_bounds": [
-        20,
+        40,
         20000
       ],
       "resolution": null,
-      "volume": 4.0,
+      "volume": 1.0,
       "volume_normalisation": "Mixture",
       "position_normalisation": "Harmonic",
       "manual_position_distribution": null,
-      "interpolation": "Bezier"
+      "interpolation": "Cubic"
     },
     "fft_resolution": 4096,
-    "refresh_rate": 120,
-    "gravity": 40.0
+    "refresh_rate": 60,
+    "gravity": 100.0
   },
   "fps": 60,
   "color": {
     "Gradient": [
-        [
-          255,
-          0,
-          255
-        ],
-        [
-          255,
-          0,
-          0
-        ]
+      [
+        155,
+        0,
+        255
+      ],
+      [
+        0,
+        30,
+        255
+      ],
+      [
+        0,
+        255,
+        60
       ]
+    ]
   },
   "width": 1,
   "spacing": 0,
