--- a/default_config.json
+++ b/default_config.json
@@ -3,7 +3,7 @@
     "processor": {
       "sample_rate": 44100,
       "frequency_bounds": [
-        40,
+        60,
         20000
       ],
       "resolution": null,
@@ -13,27 +13,29 @@
       "manual_position_distribution": null,
       "interpolation": "Cubic"
     },
-    "fft_resolution": 4096,
+    "fft_resolution": 2048,
     "refresh_rate": 60,
-    "gravity": 100.0
+    "gravity": 200.0
+
   },
+  "mirror_x_achsis": true,
   "fps": 60,
   "color": {
     "Gradient": [
       [
-        155,
-        0,
-        255
-      ],
-      [
-        0,
-        30,
-        255
-      ],
-      [
-        0,
         255,
-        60
+        0,
+        0
+      ],
+      [
+        0,
+        0,
+        255
+      ],
+      [
+        255,
+        0,
+        0
       ]
     ]
   },
