--- a/default_config.json
+++ b/default_config.json
@@ -3,7 +3,7 @@
     "processor": {
       "sample_rate": 44100,
       "frequency_bounds": [
-        60,
+        40,
         20000
       ],
       "resolution": null,
@@ -14,8 +14,8 @@
       "interpolation": "Cubic"
     },
     "fft_resolution": 2048,
-    "refresh_rate": 60,
-    "gravity": 200.0
+    "refresh_rate": 90,
+    "gravity": null
 
   },
   "mirror_x_achsis": true,
@@ -23,19 +23,19 @@
   "color": {
     "Gradient": [
       [
-        255,
-        0,
-        0
+        200,
+        200,
+        200
       ],
       [
-        0,
-        0,
-        255
+        1,
+        5,
+        63
       ],
       [
-        255,
-        0,
-        0
+        200,
+        200,
+        200
       ]
     ]
   },
@@ -44,7 +44,7 @@
   "mirror": true,
   "wgpu": {
     "transparent": false,
-    "fullscreen": false,
+    "fullscreen": true,
     "decoration": true
   }
 }
