fixed asymmetry of y achsis when x_achsis is mirrored on wgpu backend

--- a/default_config.json
+++ b/default_config.json
@@ -31,7 +31,7 @@
   "mirror": true,
   "wgpu": {
     "transparent": false,
-    "fullscreen": false,
+    "fullscreen": true,
     "decoration": true
   }
 }
