--- a/default_config.json
+++ b/default_config.json
@@ -7,17 +7,17 @@
         20000
       ],
       "resolution": null,
-      "volume": 1.0,
+      "volume": 5.0,
       "volume_normalisation": "Mixture",
       "position_normalisation": "Harmonic",
       "manual_position_distribution": null,
-      "interpolation": "Step"
+      "interpolation": "Cubic"
     },
     "fft_resolution": 2048,
     "refresh_rate": 90,
     "gravity": 50
   },
-  "mirror_x_achsis": true,
+  "mirror_x_achsis": false,
   "fps": 60,
   "color": {
     "Rgb": [
@@ -28,10 +28,11 @@
   },
   "width": 1,
   "spacing": 0,
-  "mirror": true,
+  "mirror": false,
+  "visualisation": "Wave",
   "wgpu": {
     "transparent": false,
-    "fullscreen": true,
+    "fullscreen": false,
     "decoration": true
   }
 }
