--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#audioviz = { git = "https://github.com/BrunoWallner/audioviz", branch = "main", features = ["serde"] }
-audioviz = { path = "../audioviz", features = ["serde"] }
+audioviz = { version = "0.4.4", features = ["serde"] }
+# audioviz = { path = "../audioviz", features = ["serde"] }
 
 cpal = "0.13.4"
 gag = "1.0.0"
