--- a/default_config.json
+++ b/default_config.json
@@ -7,7 +7,7 @@
         20000
       ],
       "resolution": null,
-      "volume": 5.0,
+      "volume": 15.0,
       "volume_normalisation": "Mixture",
       "position_normalisation": "Harmonic",
       "manual_position_distribution": null,
@@ -15,21 +15,21 @@
     },
     "fft_resolution": 2048,
     "refresh_rate": 90,
-    "gravity": 50
+    "gravity": 100
   },
   "mirror_x_achsis": false,
   "fps": 60,
   "color": {
     "Rgb": [
-      255,
+      200,
       0,
-      24
+      0
     ]
   },
   "width": 1,
   "spacing": 0,
-  "mirror": false,
-  "visualisation": "Wave",
+  "mirror": true,
+  "visualisation": "Spectrum",
   "wgpu": {
     "transparent": false,
     "fullscreen": false,
